--- a/Netflix.html
+++ b/Netflix.html
@@ -199,6 +199,6 @@
         </div>
 
     </footer>
-    <script src="C:\Users\admin\Documents\vs code\netflix clone\Netflix.js"></script>
+    <script src="https://raw.githubusercontent.com/Sumanth122/Netflix-home-page/main/Netflix.js"></script>
 </body>
 </html>
