--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Netflix Clone</title>
-  <link rel="stylesheet" href="C:\Users\admin\Documents\vs code\netflix clone\Netflix.css">
+  <link rel="stylesheet" href="https://raw.githubusercontent.com/Sumanth122/Netflix-home-page/main/Netflix.css">
 </head>
 <body>
     <header class="showcase">
